# open_echo

./: .gitignore  Gemfile  README.md  _config.yml  pyproject.toml
.githooks/: pre-commit
.github/workflows/: docs.yml  pypi-publish.yml  python-ci.yml  version-update.yml
TUSS4470_shield_001/: README.md
TUSS4470_shield_001/TUSS4470_arduino/: TUSS4470_shield.ino
TUSS4470_shield_001/TUSS4470_arduino/TUSS4470_shield/: TUSS4470_shield.ino
TUSS4470_shield_001/TUSS4470_shield_hardware/TUSS4470_shield/: TUSS4470_shield.kicad_pro  TUSS4470_shield.kicad_sch
TUSS4470_shield_001/live_waterfall_python/: live_waterfall_pyqt.py  live_waterfall_settings.py
TUSS4470_shield_002/: README.md  UART_UDP_relay.py  echo_interface.py  getting_started_TUSS4470_firmware.md  getting_started_interface.md  getting_started_web_interface.md  main.py  requirements.txt
TUSS4470_shield_002/TUSS4470_arduino/: TUSS4470_arduino.ino
TUSS4470_shield_002/TUSS4470_arduino/TUSS4470_shield/: TUSS4470_shield.ino
TUSS4470_shield_002/TUSS4470_arduino_binary_datatransfer/: TUSS4470_arduino_binary_datatransfer.ino
TUSS4470_shield_002/TUSS4470_shield_hardware/TUSS4470_shield/: TUSS4470_shield.kicad_pcb  TUSS4470_shield.kicad_prl  (+4 more)
TUSS4470_shield_002/arduino_r4_wifi/: README_embed_assets.md
TUSS4470_shield_002/live_waterfall_python/: echo_interface.py  live_waterfall.py  live_waterfall_experiments.py  live_waterfall_pyqt.py  live_waterfall_settings.py  open_echo_configurator.py  rpi_live_waterfall.py  rpi_livescreen.py  web_waterfall.html
TUSS4470_shield_002/web/: app.py  depth_output.py  echo.py  pyproject.toml  requirements.txt  settings.py
TUSS4470_shield_002/web/templates/: config.html  frontend.html  spectrogram.js
development/: README.md
development/PICOW2040_TUSS4470/: PICOW2040_TUSS4470.ino  settings.h  wifi_server.cpp  wifi_server.h
development/TUSS4470_PCB_ECHO/: assembly.FCStd
documentation/: contributing.md  getting_started_interface.md  getting_started_web_interface.md
documentation/getting_started/: TUSS4470_firmware.md  TUSS4470_hardware.md  desktop_interface.md  index.md  web_interface.md
documentation/lucky_fishfinder/: lucky_fishfinder.md
hardware/: .gitignore
hardware/echolot/: openecho.kicad_pcb  openecho.kicad_prl  openecho.kicad_pro  openecho.kicad_sch  sym-lib-table
hardware/prototype_01/: prototype_01.kicad_prl  prototype_01.kicad_pro  prototype_01.kicad_sch
python/tests/: test_depth_output.py  test_echo.py  test_settings.py
reverse_engineering/: README.md
reverse_engineering/read_fishfinder/: read_fishfinder.ino
software/: README.md
software/tuss4470_more_settings/: tuss4470_more_settings.ino
software/tuss4470_test/: tuss4470_test.ino
(+130 files in other folders)
