[project]
name = "openecho"
description = "Python library for OpenEcho boards"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "numpy>=2.3.2",
    "pydantic-settings>=2.10.1",
    "pyqt5>=5.15.11",
    "pyqtdarktheme>=2.1.0",
    "pyqtgraph>=0.14.0",
    "qasync>=0.24.0",
    "pyserial<3.5",
    "pyserial-asyncio>=0.6",
    "pyserial-asyncio-fast>=0.16",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]

[project.scripts]
openecho = "openecho.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["python/src/openecho"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.bumpversion]
current_version = "0.1.1"
tag = true
commit = true

[dependency-groups]
dev = [
    "hypothesis>=6.148.7",
    "mypy>=1.19.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "types-pyserial>=3.5.0.20251001",
]

[tool.mypy]
packages = ["openecho"]
ignore_missing_imports = true

[tool.ruff]
include = ["python/**/*.py"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = [
    "E501", # line too long
    "SIM105" # "with contextlib.suppress(Exception)"
]
